infra/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: cstrader-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: cstrader.local
    http:
      paths:
      - backend:
          service:
            name: api
            port:
              number: 8000
        path: /api
        pathType: Exact
      - backend:
          service:
            name: frontend
            port:
              number: 3000
        path: /
        pathType: Exact
status:
  loadBalancer: {}
